// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portal should not render the model when id is not present 1`] = `
<div>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="modal"
  />
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="popup"
  />
</div>
`;

exports[`portal should not render the popup when id is not present 1`] = `
<div>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="modal"
  />
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="popup"
  />
</div>
`;

exports[`portal should render the component 1`] = `
<div>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="modal"
  />
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="popup"
  />
</div>
`;

exports[`portal should render the component with modal type 1`] = `
<div>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="modal"
  >
    <TestComponent
      id="modal1"
      prop1="value1"
    />
  </CSSTransitionGroup>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="popup"
  />
</div>
`;

exports[`portal should render the component with popup type 1`] = `
<div>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="modal"
  />
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={0}
    transitionLeave={true}
    transitionLeaveTimeout={0}
    transitionName="popup"
  >
    <TestComponent
      id="popup1"
      prop1="value1"
    />
  </CSSTransitionGroup>
</div>
`;
